kubernetes/sakila-microservices-sakila-frontend-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sakila-microservices-frontend-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              frontend-network: "true"
  podSelector:
    matchLabels:
      frontend-network: "true"
