kubernetes/sakila-microservices-sakila-postgres-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sakila-microservices-postgres-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              postgres-network: "true"
  podSelector:
    matchLabels:
      postgres-network: "true"
